--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,94 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
 html,
 body {
-  margin: 0px;
-  padding: 0px;
   background-color: dimgray;
+  height: 100%;
 }
 
 h1 {
+  padding: 25px 0px 0px 20px;
   text-align: center;
   color: lightgoldenrodyellow;
-  font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
+}
+
+/* grid container */
+.board-size {
+  background-color: greenyellow;
+  display: -ms-grid;
+  display: grid;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 10px;
+  gap: 10px;
+  -ms-grid-column-align: center;
+      justify-self: center;
+      grid-template-areas: "one two three" "four five six" "seven eight nine";
+  /* grid items */
+}
+
+.board-size [class^="field-"] {
+  border: solid 1.2px;
+  background-color: burlywood;
+}
+
+.field-1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: one;
+}
+
+.field-2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: two;
+}
+
+.field-3 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: three;
+}
+
+.field-4 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: four;
+}
+
+.field-5 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: five;
+}
+
+.field-6 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: six;
+}
+
+.field-7 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: seven;
+}
+
+.field-8 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: eight;
+}
+
+.field-9 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+  grid-area: nine;
 }
 /*# sourceMappingURL=style.css.map */
