--- a/style/style.scss
+++ b/style/style.scss
@@ -1,18 +1,67 @@
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
 html,
 body {
-  margin: 0px;
-  padding: 0px;
   background-color: dimgray;
+  height: 100%;
 }
 
 h1 {
+  padding: 25px 0px 0px 20px;
   text-align: center;
   color: lightgoldenrodyellow;
-  font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
 }
 
+/* grid container */
+.board-size {
+  background-color: greenyellow;
+  display: grid;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 10px;
+  gap: 10px;
+  justify-self: center;
+  grid-template-areas:
+    "one two three"
+    "four five six"
+    "seven eight nine";
+  /* grid items */
+  [class^="field-"] {
+    border: solid 1.2px;
+    background-color: burlywood;
+  }
+}
+
+.field-1 {
+  grid-area: one;
+}
+
+.field-2 {
+  grid-area: two;
+}
+.field-3 {
+  grid-area: three;
+}
+.field-4 {
+  grid-area: four;
+}
+.field-5 {
+  grid-area: five;
+}
+.field-6 {
+  grid-area: six;
+}
+.field-7 {
+  grid-area: seven;
+}
+.field-8 {
+  grid-area: eight;
+}
+.field-9 {
+  grid-area: nine;
+}
