--- a/style/style.scss
+++ b/style/style.scss
@@ -6,21 +6,21 @@
 
 html,
 body {
-  background-color: dimgray;
+  background-color: #1b402e;
   height: 100%;
 }
 
 h1 {
   padding: 25px 0px 0px 20px;
   text-align: center;
-  color: lightgoldenrodyellow;
+  color: #0367a6;
   font-size: 2.8rem;
 }
 
 /* grid container */
 .board-size {
-  background-color: greenyellow;
   display: grid;
+  background-color: #038c5a;
   margin: 0 auto;
   margin-top: 40px;
   padding: 10px;
@@ -30,10 +30,12 @@ h1 {
     "one two three"
     "four five six"
     "seven eight nine";
+
   /* grid items */
   [class^="field-"] {
-    border: solid 1.2px;
-    background-color: burlywood;
+    border: solid 3px;
+    border-color: #04d94f;
+    background-color: #04bf68;
   }
 }
 
@@ -64,4 +66,10 @@ h1 {
 }
 .field-9 {
   grid-area: nine;
+}
+
+@media (min-width: 1000px) {
+  .board-size {
+    max-width: 40%;
+  }
 }
