--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,43 @@ h1 {
   font-size: 2.8rem;
 }
 
+p {
+  margin: 10px;
+  color: white;
+  font-size: 1.7rem;
+  text-align: center;
+}
+
+section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 10px;
+  padding: 20px;
+}
+
+section .btn-start-game {
+  cursor: pointer;
+  background-color: #04bf68;
+  color: black;
+  padding: 0.5rem 1rem;
+  border-radius: 0.3rem;
+  border: none;
+  font-size: 2rem;
+}
+
+.score-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 /* grid container */
 .board-size {
   display: -ms-grid;
@@ -37,6 +74,20 @@ h1 {
   border: solid 3px;
   border-color: #04d94f;
   background-color: #04bf68;
+}
+
+.o-image {
+  background-image: url("../img/o.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.x-image {
+  background-image: url("../img/x.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .field-1 {
