--- a/style/style.scss
+++ b/style/style.scss
@@ -17,6 +17,35 @@ h1 {
   font-size: 2.8rem;
 }
 
+p {
+  margin: 10px;
+  color: white;
+  font-size: 1.7rem;
+  text-align: center;
+}
+
+section {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+  padding: 20px;
+  .btn-start-game {
+    cursor: pointer;
+    background-color: #04bf68;
+    color: black;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    border: none;
+    font-size: 2rem;
+  }
+}
+
+.score-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 /* grid container */
 .board-size {
   display: grid;
@@ -37,6 +66,20 @@ h1 {
     border-color: #04d94f;
     background-color: #04bf68;
   }
+}
+
+.o-image {
+  background-image: url("../img/o.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.x-image {
+  background-image: url("../img/x.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .field-1 {
