--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono:wght@600&family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono:wght@600&family=Roboto:wght@300&family=Ubuntu&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0px;
@@ -11,24 +14,25 @@ body {
 }
 
 h1 {
-  padding: 25px 0px 0px 20px;
+  font-family: "Roboto Mono", monospace;
   text-align: center;
-  color: #0367a6;
-  font-size: 2.8rem;
+  color: #008be2;
+  font-size: 3rem;
+  padding: 20px 0px;
 }
 
 p {
+  font-family: "Ubuntu", sans-serif;
   margin: 10px;
   color: white;
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   text-align: center;
 }
 
 section {
   display: flex;
   justify-content: space-around;
-  margin-top: 10px;
-  padding: 20px;
+  margin-top: 25px;
   .btn-start-game {
     cursor: pointer;
     background-color: #04bf68;
@@ -37,6 +41,8 @@ section {
     border-radius: 0.3rem;
     border: none;
     font-size: 2rem;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: bold;
   }
 }
 
@@ -51,7 +57,6 @@ section {
   display: grid;
   background-color: #038c5a;
   margin: 0 auto;
-  margin-top: 40px;
   padding: 10px;
   gap: 10px;
   justify-self: center;
